# mutual

./: .env.example  .eslintrc.cjs  .gitignore  Anchor.toml  Dockerfile  MutualContract.rs  MutualContract.test.js  cargo.toml  config.js  index.html  index.js  package-lock.json  package.json  readme.md  tailwind.config.js  vite.config.js
app/api/: twitterApi.js
app/middleware/: authMiddleware.js
app/routes/: adminRoutes.js  authRoutes.js  campaignRoutes.js  escrowRoutes.js  influencerRoutes.js  messagesRoutes.js  newMessagesRoutes.js  tokenRoutes.js  userRoutes.js  walletRoutes.js
app/utils/: campaignUtils.js  contractUtils.js  ipfsUtils.js  miscUtils.js  solanaUtils.js  unOfficialTwitterApiUtils.js
app/workers/: campaignWorkers.js  tokenWorkers.js  twitterWorkers.js
client/: client.ts
idl/: mutual-escrow.js
prisma/: schema.prisma
prisma/seed/: initial-seed.js
programs/mutual-escrow/: Cargo.toml
programs/mutual-escrow/src/: lib.rs
scripts/: subscribe-event-test.js
src/: App.jsx  config.js  error.rs  index.css  lib.rs  routes.jsx  state.rs  utils.rs
src/api/: mutual.js
src/assets/: lottie-loading.json
src/contexts/: AuthContext.js  SessionContext.js
src/hooks/: use-session.js  use-sse.js  use-wallet-tokens.js
src/instructions/: accept_deal.rs  create_deal.rs  dispute_deal.rs  initialize.rs  release_payment.rs  resolve_dispute.rs
src/layouts/: AdminLayout.jsx  RootLayout.jsx
src/lib/: solana.js
src/loaders/: route-loaders.js
src/mconnect/: AuthProvider.jsx  Web3Provider.jsx
tests/: mutual-escrow.ts  mutual_escrow.js
(+76 files in other folders)
